--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,11 @@
-node_modules
-bower_components
+# ignore everything
+*
 
-.*.swp
-._*
-.DS_Store
-.git
-.hg
-.npmrc
-.lock-wscript
-.svn
-.wafpickle-*
-config.gypi
-CVS
-npm-debug.log
+# but not these files...
+!getStats.js
+!getStats.min.js
+!index.html
+!package.json
+!bower.json
+!server.js
+!README.md
