--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "getstats",
   "preferGlobal": true,
-  "version": "1.0.6",
+  "version": "1.0.7",
   "author": {
     "name": "Muaz Khan",
     "email": "muazkh@gmail.com",
@@ -42,6 +42,7 @@
     "grunt": "0.4.5",
     "grunt-bump": "0.7.0",
     "grunt-cli": "0.1.13",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-contrib-concat": "0.5.1",
     "grunt-contrib-uglify": "0.11.0",
     "grunt-jsbeautifier": "0.2.10",
