--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
     "name": "getstats",
     "description": "A tiny JavaScript library using WebRTC getStats API to return peer connection stats i.e. bandwidth usage, packets lost, local/remote ip addresses and ports, type of connection etc.",
-    "version": "1.0.7",
+    "version": "1.0.8",
     "authors": [
         {
             "name": "Muaz Khan",
             "email": "muazkh@gmail.com",
-            "homepage": "http://www.muazkhan.com/"
+            "homepage": "https://muazkhan.com/"
         }
     ],
     "main": "./getStats.js",
