--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "getstats",
   "preferGlobal": true,
-  "version": "1.0.9",
+  "version": "1.2.0",
   "author": {
     "name": "Muaz Khan",
     "email": "muazkh@gmail.com",
@@ -38,6 +38,7 @@
   "homepage": "https://www.webrtc-experiment.com/getStats/",
   "_id": "getstats@",
   "_from": "getstats@",
+  "tonicExampleFilename": "npm-test.js",
   "devDependencies": {
     "grunt": "0.4.5",
     "grunt-bump": "0.7.0",
